Update refs and links for GZH, GZC
- papers are both 2017
- links to ADS, arXiv, and MNRAS pages

--- a/public/index.html
+++ b/public/index.html
@@ -388,7 +388,7 @@
 
 					<div data-scroll-index="7">
 						<h1>Galaxy Zoo 2</h1>
-                        <p> <a href="http://zoo2.galaxyzoo.org">Galaxy Zoo 2 (GZ2)</a> was the successor project to Galaxy Zoo. GZ2 extends the original Galaxy Zoo classifications for a subsample of the brightest and largest galaxies in the Legacy release, measuring more detailed morphological features. This includes galactic bars, spiral arm and pitch angle, bulges, edge-on galaxies, relative ellipticities, and many others. Two debiased Galaxy Zoo tables are provided, described in  <a href="http://arxiv.org/abs/1308.3496v2">Willett et al. (2013) </a> and <a href="http://mnras.oxfordjournals.org/content/461/4/3663">Hart et al. (2016)</a>: we strongly advise the use of the  <a href="http://mnras.oxfordjournals.org/content/461/4/3663">Hart et al. (2016)</a> table, as this debiases the GZ2 quetion tree most consistently. 
+                        <p> <a href="http://zoo2.galaxyzoo.org">Galaxy Zoo 2 (GZ2)</a> was the successor project to Galaxy Zoo. GZ2 extends the original Galaxy Zoo classifications for a subsample of the brightest and largest galaxies in the Legacy release, measuring more detailed morphological features. This includes galactic bars, spiral arm and pitch angle, bulges, edge-on galaxies, relative ellipticities, and many others. Two debiased Galaxy Zoo tables are provided, described in <a href="http://arxiv.org/abs/1308.3496v2">Willett et al. (2013) </a> and <a href="http://mnras.oxfordjournals.org/content/461/4/3663">Hart et al. (2016)</a>: we strongly advise the use of the <a href="http://mnras.oxfordjournals.org/content/461/4/3663">Hart et al. (2016)</a> table, as this debiases the GZ2 quetion tree most consistently. 
 					</div>
 
 
@@ -596,7 +596,7 @@
 
 					<div data-scroll-index="12">
 						<h2>Full catalog</h2>
-						<p>The full reduction and analysis of GZ: Hubble has been published in Willett et al. (2016; accepted to MNRAS). Please refer to and cite this paper if using any data from the project. The full data reduction pipeline and analysis codes for GZH are available as a <a href="https://github.com/willettk/gzhubble">Github repository</a>.</p>
+						<p>The full reduction and analysis of GZ: Hubble was published in <a href="https://ui.adsabs.harvard.edu/#abs/2017MNRAS.464.4176W/abstract">Willett et al. (2017)</a> (available both from <a href="https://arxiv.org/abs/1610.03068">arXiv</a> or the <a href="https://academic.oup.com/mnras/article-abstract/464/4/4176/2527878/Galaxy-Zoo-morphological-classifications-for-120?redirectedFrom=fulltext">MNRAS journal</a>). Please cite this paper if using any data from the project. The full data reduction pipeline and analysis codes for GZH are available as an open-source <a href="https://github.com/willettk/gzhubble">Github repository</a>.</p>
 					</div>
 
 						<table class="downloads">
@@ -754,7 +754,7 @@
 					<div data-scroll-index="14">
 						<h1>Galaxy Zoo: CANDELS</h1>
 						<p>Galaxy Zoo: CANDELS classified the morphology of galaxies in images from the <a href="http://candels.ucolick.org/">Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey (CANDELS)</a>. CANDELS images were taken with both the ACS and WFC3 cameras on the Hubble Space Telescope, focusing on rest-frame optical wavelengths of galaxies at redshifts of 1 &lt; z &lt; 3. </p>
-						<p>Simmons et al. (2016; accepted to MNRAS) describes the project and data release. Please refer to and cite this paper if using any data from GZC.</p>
+						<p><a href="https://ui.adsabs.harvard.edu/#abs/2017MNRAS.464.4176W/abstract">Simmons et al. (2017)</a> (available both from <a href="https://arxiv.org/abs/1610.03070">arXiv</a> or the <a href="https://academic.oup.com/mnras/article-abstract/464/4/4420/2417365/Galaxy-Zoo-quantitative-visual-morphological?redirectedFrom=fulltext">MNRAS journal</a>) describes the project and data release. Please cite this paper if using any data from Galaxy Zoo: CANDELS.</p>
 					</div>
 
 					<div data-scroll-index="15">
